feat(filter): filter records by contractTxId
Allows a query param that filters out records that meet a specific contractTxId. We can extend this to multiple values allowed on records objects, but will start with this for now
